<resources>
    <string name="app_name">Calculator_Kt</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="steret">Steret</string>
    <string name="milt_btn">*</string>
    <string name="ac">AC</string>
    <string name="share">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="ravno">=</string>
    <string name="str">str</string>
    <string name="ac9">AC</string>
</resources>